fix overscroll on safari

--- a/template/scss/patterns/_content.scss
+++ b/template/scss/patterns/_content.scss
@@ -23,6 +23,11 @@
 
     overflow: hidden;
 
+    &:first-child
+    {
+        margin-top: 1px;
+    }
+
     &:last-child
     {
         min-height: 100vh;
